--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-google-search-console-verification-file
+- jekyll-pdf-embed
   
 paginate: 4
 paginate_path: "/page:num/"
